checks on simplifier, random tested added. Bugs solved, gievn that we had the possibility to simplify further given we changed ZXZ -> XZX, some problems arised in the simplifier. I solved this by adding a second list, that checks if the gate has been flagged to be modified or not (it was not enough with the method i was using before). Folder with many tests QUILOMBO added, but will be erased in next commit

--- a/testing/testing_simplifier/quilombo/compilation_solved-Copy10.ipynb
+++ b/testing/testing_simplifier/quilombo/compilation_solved-Copy10.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -30,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tf.Tensor([2.0000002], shape=(1,), dtype=float32) tf.Tensor(2.0, shape=(), dtype=float32)\n"
+      "tf.Tensor([-8.], shape=(1,), dtype=float32) tf.Tensor(-8.000002, shape=(), dtype=float32)\n"
      ]
     }
    ],
@@ -49,8 +49,8 @@
     "\n",
     "#indexed_circuit = [vqe_handler.number_of_cnots + k for k in range(vqe_handler.n_qubits, 2*vqe_handler.n_qubits )]\n",
     "#indexed_circuit = [5,4,2,4,3,5,3,0,5,5]\n",
-    "#indexed_circuit = [5,3,2,4,1,1,2,4,3,5,4,0,5,5,3,0,3,5,3,5]\n",
-    "indexed_circuit = [4,3,0,2]\n",
+    "indexed_circuit = [5,3,2,4,1,1,2,4,3,5,4,0,5,5,3,0,3,5,3,5]\n",
+    "#indexed_circuit = [4,3,0,2]\n",
     "circuit, symbols, index_to_symbols = vqe_handler.give_circuit(indexed_circuit)\n",
     "energy, resolver, history = vqe_handler.vqe(indexed_circuit)\n",
     "\n",
@@ -60,23 +60,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<pre style=\"overflow: auto; white-space: pre;\">(0, 0): ───Rx(-π)──────@───Rz(0.577π)───\n",
-       "                       │\n",
-       "(0, 1): ───Rz(0.26π)───X────────────────</pre>"
+       "<pre style=\"overflow: auto; white-space: pre;\">(0, 0): ───Rz(1.28π)────Rx(1.22π)─────X───X───Rz(0.796π)───Rx(-1.55π)───Rx(1.25π)───@────────────────────────────────────────@─────────────────────────────────────────────────────\n",
+       "                                      │   │                                         │                                        │\n",
+       "(0, 1): ───Rx(0.866π)───Rz(-0.753π)───@───@───Rz(0.992π)───Rx(1.24π)────────────────X───Rx(-1.68π)───Rx(0.04π)───Rz(-0.5π)───X───Rz(1.69π)───Rx(-1.6π)───Rz(0.581π)───Rx(0.711π)───</pre>"
       ],
       "text/plain": [
-       "(0, 0): ───Rx(-π)──────@───Rz(0.577π)───\n",
-       "                       │\n",
-       "(0, 1): ───Rz(0.26π)───X────────────────"
+       "(0, 0): ───Rz(1.28π)────Rx(1.22π)─────X───X───Rz(0.796π)───Rx(-1.55π)───Rx(1.25π)───@────────────────────────────────────────@─────────────────────────────────────────────────────\n",
+       "                                      │   │                                         │                                        │\n",
+       "(0, 1): ───Rx(0.866π)───Rz(-0.753π)───@───@───Rz(0.992π)───Rx(1.24π)────────────────X───Rx(-1.68π)───Rx(0.04π)───Rz(-0.5π)───X───Rz(1.69π)───Rx(-1.6π)───Rz(0.581π)───Rx(0.711π)───"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,18 @@
      "output_type": "stream",
      "text": [
       "3\n",
-      "4\n"
+      "cnt_rule 3\n",
+      "2\n",
+      "cnt_rule 2\n",
+      "4\n",
+      "cnt_rule 4\n",
+      "7\n",
+      "7\n",
+      "cnt_rule 7\n",
+      "5\n",
+      "cnt_rule 5\n",
+      "4\n",
+      "cnt_rule 4\n"
      ]
     }
    ],
@@ -107,23 +118,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<pre style=\"overflow: auto; white-space: pre;\">(0, 0): ───Rx(-π)───@───Rz(0.577π)───\n",
-       "                    │\n",
-       "(0, 1): ────────────X────────────────</pre>"
+       "<pre style=\"overflow: auto; white-space: pre;\">(0, 0): ───Rx(1.22π)────Rz(0.796π)───Rx(-0.309π)───@───────────────@───────────────────────────────────────\n",
+       "                                                   │               │\n",
+       "(0, 1): ───Rx(0.866π)───Rz(0.239π)───Rx(-0.399π)───X───Rz(-0.5π)───X───Rz(0.41π)───Rx(0.5π)───Rz(0.373π)───</pre>"
       ],
       "text/plain": [
-       "(0, 0): ───Rx(-π)───@───Rz(0.577π)───\n",
-       "                    │\n",
-       "(0, 1): ────────────X────────────────"
+       "(0, 0): ───Rx(1.22π)────Rz(0.796π)───Rx(-0.309π)───@───────────────@───────────────────────────────────────\n",
+       "                                                   │               │\n",
+       "(0, 1): ───Rx(0.866π)───Rz(0.239π)───Rx(-0.399π)───X───Rz(-0.5π)───X───Rz(0.41π)───Rx(0.5π)───Rz(0.373π)───"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,16 +146,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: shape=(1,), dtype=float32, numpy=array([2.], dtype=float32)>"
+       "<tf.Tensor: shape=(1,), dtype=float32, numpy=array([-8.], dtype=float32)>"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
