--- a/testing/testing_simplifier/quilombo/compilation_solved0.ipynb
+++ b/testing/testing_simplifier/quilombo/compilation_solved0.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 455,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -21,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 456,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tf.Tensor([-3.9999928], shape=(1,), dtype=float32) tf.Tensor(-3.9999938, shape=(), dtype=float32)\n"
+      "tf.Tensor([-7.9999986], shape=(1,), dtype=float32) tf.Tensor(-7.9999986, shape=(), dtype=float32)\n"
      ]
     }
    ],
@@ -41,7 +50,8 @@
     "#indexed_circuit = [vqe_handler.number_of_cnots + k for k in range(vqe_handler.n_qubits, 2*vqe_handler.n_qubits )]\n",
     "#indexed_circuit = [5,4,2,4,3,5,3,0,5,5]\n",
     "#indexed_circuit = [5,3,3,5,4,0,5,5,3,3,5,3,5]\n",
-    "indexed_circuit =[5, 3, 5, 3, 4, 2, 4, 1, 3, 1]\n",
+    "indexed_circuit = [4, 1, 1, 3, 3, 5, 3, 5, 3, 4, 2, 4, 1, 3, 1, 3, 5, 0, 2, 4, 2, 5, 3, 5, 0, 3, 4, 2, 0, 2, 4, 2, 5, 3, 5, 0, 4, 1, 1, 3, 5, 3, 4, 2, 4, 1, 5, 3, 4, 2, 4, 3, 1, 0, 2, 4, 2, 5, 3, 5, 0, 3, 0, 2, 4, 2, 5, 3, 5, 0, 5, 3, 4, 2, 4, 1, 5, 3, 1, 2, 4, 2, 0, 2, 4, 2, 5, 3, 2, 4, 2, 1, 3, 5, 3, 4, 2, 4, 1, 5, 0, 5]\n",
+    "indexed_circuit = indexed_circuit[5:20]\n",
     "circuit, symbols, index_to_symbols = vqe_handler.give_circuit(indexed_circuit)\n",
     "energy, resolver, history = vqe_handler.vqe(indexed_circuit)\n",
     "\n",
@@ -51,16 +61,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 457,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"overflow: auto; white-space: pre;\">(0, 0): ───Rx(-0.632π)───Rz(0.436π)───Rx(0.365π)────────────────X───────────────X─────────────────────────────@───Rz(0.146π)───Rx(-0.496π)───\n",
+       "                                                                │               │                             │\n",
+       "(0, 1): ───Rx(-1.47π)────Rz(0.946π)───Rx(-1.44π)───Rz(-0.48π)───@───Rz(1.38π)───@───Rz(0.752π)───Rx(0.443π)───X──────────────────────────────</pre>"
+      ],
+      "text/plain": [
+       "(0, 0): ───Rx(-0.632π)───Rz(0.436π)───Rx(0.365π)────────────────X───────────────X─────────────────────────────@───Rz(0.146π)───Rx(-0.496π)───\n",
+       "                                                                │               │                             │\n",
+       "(0, 1): ───Rx(-1.47π)────Rz(0.946π)───Rx(-1.44π)───Rz(-0.48π)───@───Rz(1.38π)───@───Rz(0.752π)───Rx(0.443π)───X──────────────────────────────"
+      ]
+     },
+     "execution_count": 457,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "resolver[\"th_7\"] = 20"
+    "#Mindexed_circuit, Mresolver, Mindex_to_symbols = iid_inserter.place_identities(indexed_circuit,symbol_to_value=resolver,rate_iids_per_step=2)\n",
+    "Mcircuit = vqe_handler.give_unitary(indexed_circuit, resolver)\n",
+    "Mcircuit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 458,
    "metadata": {},
    "outputs": [
     {
@@ -68,60 +98,41 @@
      "output_type": "stream",
      "text": [
       "5\n",
-      "cnt_rule 5\n"
+      "cnt_rule 5\n",
+      "6\n",
+      "cnt_rule 6\n",
+      "3\n",
+      "cnt_rule 3\n",
+      "6\n",
+      "cnt_rule 6\n",
+      "2\n",
+      "cnt_rule 2\n"
      ]
     }
    ],
    "source": [
-    "i,r,po=simplifier.simplify_step(indexed_circuit,resolver,index_to_symbols)"
+    "i,r,po=simplifier.reduce_circuit(indexed_circuit,resolver,index_to_symbols)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 459,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<pre style=\"overflow: auto; white-space: pre;\">(0, 0): ───Rx(1.49π)─────Rz(π)────────Rx(0.487π)────────────────X────────────────X───\n",
-       "                                                                │                │\n",
-       "(0, 1): ───Rx(-0.998π)───Rz(0.124π)───Rx(0.998π)───Rz(-1.05π)───@───Rz(-1.63π)───@───</pre>"
+       "<pre style=\"overflow: auto; white-space: pre;\">(0, 0): ───Rx(-0.632π)───Rz(0.436π)───Rx(0.365π)───@───Rz(0.146π)───Rx(-0.496π)───\n",
+       "                                                   │\n",
+       "(0, 1): ───Rx(0.061π)────Rz(2π)───────Rx(0.443π)───X──────────────────────────────</pre>"
       ],
       "text/plain": [
-       "(0, 0): ───Rx(1.49π)─────Rz(π)────────Rx(0.487π)────────────────X────────────────X───\n",
-       "                                                                │                │\n",
-       "(0, 1): ───Rx(-0.998π)───Rz(0.124π)───Rx(0.998π)───Rz(-1.05π)───@───Rz(-1.63π)───@───"
+       "(0, 0): ───Rx(-0.632π)───Rz(0.436π)───Rx(0.365π)───@───Rz(0.146π)───Rx(-0.496π)───\n",
+       "                                                   │\n",
+       "(0, 1): ───Rx(0.061π)────Rz(2π)───────Rx(0.443π)───X──────────────────────────────"
       ]
      },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cirq.resolve_parameters(circuit,resolver)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"overflow: auto; white-space: pre;\">(0, 0): ───Rx(1.49π)────Rz(π)───────Rx(0.487π)───X────────────────X───\n",
-       "                                                 │                │\n",
-       "(0, 1): ───Rz(-1.56π)───Rx(-2.0π)───Rz(-1.61π)───@───Rz(0.124π)───@───</pre>"
-      ],
-      "text/plain": [
-       "(0, 0): ───Rx(1.49π)────Rz(π)───────Rx(0.487π)───X────────────────X───\n",
-       "                                                 │                │\n",
-       "(0, 1): ───Rz(-1.56π)───Rx(-2.0π)───Rz(-1.61π)───@───Rz(0.124π)───@───"
-      ]
-     },
-     "execution_count": 48,
+     "execution_count": 459,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,112 +144,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"overflow: auto; white-space: pre;\">(0, 0): ───Rx(th_3)───Rz(th_4)───Rx(th_5)───X──────────────X───\n",
-       "                                            │              │\n",
-       "(0, 1): ───Rz(th_0)───Rx(th_1)───Rz(th_2)───@───Rz(th_6)───@───</pre>"
-      ],
-      "text/plain": [
-       "(0, 0): ───Rx(th_3)───Rz(th_4)───Rx(th_5)───X──────────────X───\n",
-       "                                            │              │\n",
-       "(0, 1): ───Rz(th_0)───Rx(th_1)───Rz(th_2)───@───Rz(th_6)───@───"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vqe_handler.give_circuit(i)[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 460,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'th_0': 2.438488638105051,\n",
-       " 'th_1': 2.000727394910686,\n",
-       " 'th_2': -1.6112762314978026,\n",
-       " 'th_3': 1.4863957847889575,\n",
-       " 'th_4': 1.0002777129627916,\n",
-       " 'th_5': -3.5134878616778744,\n",
-       " 'th_6': 0.12442375369909131}"
+       "<tf.Tensor: shape=(1,), dtype=float32, numpy=array([-7.999999], dtype=float32)>"
       ]
      },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "{s:v/np.pi for s,v in r.items()}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-2.69924486e-01+0.96288073j, -9.54140414e-05+0.00121235j],\n",
-       "       [ 9.54140414e-05+0.00121235j, -2.69924486e-01-0.96288073j]])"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "q=vqe_handler.qubits[0]\n",
-    "cirq.unitary(cirq.Circuit([cirq.rx(-0.998*np.pi).on(q),cirq.rz(.124*np.pi).on(q),cirq.rx(.998*np.pi).on(q),cirq.rz(-1.05*np.pi).on(q)]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-0.26538785+0.96414174j,  0.        +0.j        ],\n",
-       "       [-0.        +0.j        , -0.26538785-0.96414174j]])"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cirq.unitary(cirq.Circuit([cirq.rz(1.44*np.pi).on(q),cirq.rx(2*np.pi).on(q),cirq.rz(-0.611*np.pi).on(q)]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor: shape=(1,), dtype=float32, numpy=array([-3.9999866], dtype=float32)>"
-      ]
-     },
-     "execution_count": 43,
+     "execution_count": 460,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,6 +161,20 @@
    "source": [
     "model(nu)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
