--- a/testing/testing_simplifier/quilombo/problema1-Copy10.ipynb
+++ b/testing/testing_simplifier/quilombo/problema1-Copy10.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -30,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 450,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tf.Tensor([-8.], shape=(1,), dtype=float32) tf.Tensor(-8.0, shape=(), dtype=float32)\n"
+      "tf.Tensor([-3.9999952], shape=(1,), dtype=float32) tf.Tensor(-3.9999957, shape=(), dtype=float32)\n"
      ]
     }
    ],
@@ -50,8 +50,7 @@
     "#indexed_circuit = [vqe_handler.number_of_cnots + k for k in range(vqe_handler.n_qubits, 2*vqe_handler.n_qubits )]\n",
     "#indexed_circuit = [5,4,2,4,3,5,3,0,5,5]\n",
     "#indexed_circuit = [5,3,3,5,4,0,5,5,3,3,5,3,5]\n",
-    "indexed_circuit = [4, 1, 1, 3, 3, 5, 3, 5, 3, 4, 2, 4, 1, 3, 1, 3, 5, 0, 2, 4, 2, 5, 3, 5, 0, 3, 4, 2, 0, 2, 4, 2, 5, 3, 5, 0, 4, 1, 1, 3, 5, 3, 4, 2, 4, 1, 5, 3, 4, 2, 4, 3, 1, 0, 2, 4, 2, 5, 3, 5, 0, 3, 0, 2, 4, 2, 5, 3, 5, 0, 5, 3, 4, 2, 4, 1, 5, 3, 1, 2, 4, 2, 0, 2, 4, 2, 5, 3, 2, 4, 2, 1, 3, 5, 3, 4, 2, 4, 1, 5, 0, 5]\n",
-    "indexed_circuit = indexed_circuit[5:20]\n",
+    "indexed_circuit =[5, 3, 5, 3, 4, 2, 4, 1, 3, 1]\n",
     "circuit, symbols, index_to_symbols = vqe_handler.give_circuit(indexed_circuit)\n",
     "energy, resolver, history = vqe_handler.vqe(indexed_circuit)\n",
     "\n",
@@ -61,36 +60,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 451,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"overflow: auto; white-space: pre;\">(0, 0): ───Rx(0.476π)───Rz(1.53π)─────Rx(1.23π)─────────────────X───────────────X────────────────────────────@───Rz(-1.96π)───Rx(-1.7π)───\n",
-       "                                                                │               │                            │\n",
-       "(0, 1): ───Rx(0.475π)───Rz(-0.817π)───Rx(-1.27π)───Rz(0.549π)───@───Rz(1.89π)───@───Rz(1.79π)───Rx(0.994π)───X────────────────────────────</pre>"
-      ],
-      "text/plain": [
-       "(0, 0): ───Rx(0.476π)───Rz(1.53π)─────Rx(1.23π)─────────────────X───────────────X────────────────────────────@───Rz(-1.96π)───Rx(-1.7π)───\n",
-       "                                                                │               │                            │\n",
-       "(0, 1): ───Rx(0.475π)───Rz(-0.817π)───Rx(-1.27π)───Rz(0.549π)───@───Rz(1.89π)───@───Rz(1.79π)───Rx(0.994π)───X────────────────────────────"
-      ]
-     },
-     "execution_count": 451,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Mindexed_circuit, Mresolver, Mindex_to_symbols = iid_inserter.place_identities(indexed_circuit,symbol_to_value=resolver,rate_iids_per_step=2)\n",
-    "Mcircuit = vqe_handler.give_unitary(indexed_circuit, resolver)\n",
-    "Mcircuit"
+    "resolver[\"th_7\"] = 20"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 452,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -98,41 +77,60 @@
      "output_type": "stream",
      "text": [
       "5\n",
-      "cnt_rule 5\n",
-      "6\n",
-      "cnt_rule 6\n",
-      "3\n",
-      "cnt_rule 3\n",
-      "6\n",
-      "cnt_rule 6\n",
-      "2\n",
-      "cnt_rule 2\n"
+      "cnt_rule 5\n"
      ]
     }
    ],
    "source": [
-    "i,r,po=simplifier.reduce_circuit(indexed_circuit,resolver,index_to_symbols)"
+    "i,r,po=simplifier.simplify_step(indexed_circuit,resolver,index_to_symbols)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 453,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<pre style=\"overflow: auto; white-space: pre;\">(0, 0): ───Rx(0.476π)───Rz(1.53π)───Rx(1.23π)────@───Rz(-1.96π)───Rx(-1.7π)───\n",
-       "                                                 │\n",
-       "(0, 1): ───Rx(0.303π)───Rz(-0.5π)───Rx(-1.27π)───X────────────────────────────</pre>"
+       "<pre style=\"overflow: auto; white-space: pre;\">(0, 0): ───Rx(-2.0π)────Rz(0.913π)───Rx(0.002π)───────────────X────────────────X───\n",
+       "                                                              │                │\n",
+       "(0, 1): ───Rx(0.838π)───Rz(π)────────Rx(1.84π)────Rz(1.04π)───@───Rz(-1.63π)───@───</pre>"
       ],
       "text/plain": [
-       "(0, 0): ───Rx(0.476π)───Rz(1.53π)───Rx(1.23π)────@───Rz(-1.96π)───Rx(-1.7π)───\n",
-       "                                                 │\n",
-       "(0, 1): ───Rx(0.303π)───Rz(-0.5π)───Rx(-1.27π)───X────────────────────────────"
+       "(0, 0): ───Rx(-2.0π)────Rz(0.913π)───Rx(0.002π)───────────────X────────────────X───\n",
+       "                                                              │                │\n",
+       "(0, 1): ───Rx(0.838π)───Rz(π)────────Rx(1.84π)────Rz(1.04π)───@───Rz(-1.63π)───@───"
       ]
      },
-     "execution_count": 453,
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cirq.resolve_parameters(circuit,resolver)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"overflow: auto; white-space: pre;\">(0, 0): ───Rx(-2.0π)────Rz(0.913π)───Rx(0.002π)───X────────────────X───\n",
+       "                                                  │                │\n",
+       "(0, 1): ───Rz(0.669π)───Rx(π)────────Rz(0.709π)───@───Rz(-1.63π)───@───</pre>"
+      ],
+      "text/plain": [
+       "(0, 0): ───Rx(-2.0π)────Rz(0.913π)───Rx(0.002π)───X────────────────X───\n",
+       "                                                  │                │\n",
+       "(0, 1): ───Rz(0.669π)───Rx(π)────────Rz(0.709π)───@───Rz(-1.63π)───@───"
+      ]
+     },
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,16 +142,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"overflow: auto; white-space: pre;\">(0, 0): ───Rx(th_3)───Rz(th_4)───Rx(th_5)───X──────────────X───\n",
+       "                                            │              │\n",
+       "(0, 1): ───Rz(th_0)───Rx(th_1)───Rz(th_2)───@───Rz(th_6)───@───</pre>"
+      ],
+      "text/plain": [
+       "(0, 0): ───Rx(th_3)───Rz(th_4)───Rx(th_5)───X──────────────X───\n",
+       "                                            │              │\n",
+       "(0, 1): ───Rz(th_0)───Rx(th_1)───Rz(th_2)───@───Rz(th_6)───@───"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vqe_handler.give_circuit(i)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: shape=(1,), dtype=float32, numpy=array([-1.239749], dtype=float32)>"
+       "<tf.Tensor: shape=(1,), dtype=float32, numpy=array([-3.9999902], dtype=float32)>"
       ]
      },
-     "execution_count": 454,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,9 +196,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-2.69924486e-01+0.96288073j, -9.54140414e-05+0.00121235j],\n",
+       "       [ 9.54140414e-05+0.00121235j, -2.69924486e-01-0.96288073j]])"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q=vqe_handler.qubits[0]\n",
+    "cirq.unitary(cirq.Circuit([cirq.rx(-0.998*np.pi).on(q),cirq.rz(.124*np.pi).on(q),cirq.rx(.998*np.pi).on(q),cirq.rz(-1.05*np.pi).on(q)]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.26538785+0.96414174j,  0.        +0.j        ],\n",
+       "       [-0.        +0.j        , -0.26538785-0.96414174j]])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cirq.unitary(cirq.Circuit([cirq.rz(1.44*np.pi).on(q),cirq.rx(2*np.pi).on(q),cirq.rz(-0.611*np.pi).on(q)]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(1,), dtype=float32, numpy=array([-3.9999743], dtype=float32)>"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
