--- a/autoencoder_honest.ipynb
+++ b/autoencoder_honest.ipynb
@@ -238,7 +238,69 @@
       "current energy: 2.0265579223632812e-05\n",
       " lower_bound: 0.0\n",
       "cnt_rule 6\n",
-      "cnt_rule 7\n"
+      "cnt_rule 7\n",
+      "I killed 1 unitaries, Ef - Ei: 5.960464477539062e-07\n",
+      "\n",
+      "Iteration #8\n",
+      "Time since beggining:0:17:27.469014\n",
+      " best energy: 1.7881393432617188e-05\n",
+      "current energy: 1.7881393432617188e-05\n",
+      " lower_bound: 0.0\n",
+      "cnt_rule 7\n",
+      "cnt_rule 6\n",
+      "cnt_rule 7\n",
+      "cnt_rule 6\n",
+      "\n",
+      "Iteration #9\n",
+      "Time since beggining:0:17:53.731511\n",
+      " best energy: 1.7881393432617188e-05\n",
+      "current energy: 1.7881393432617188e-05\n",
+      " lower_bound: 0.0\n",
+      "cnt_rule 5\n",
+      "cnt_rule 1\n",
+      "cnt_rule 7\n",
+      "cnt_rule 7\n",
+      "cnt_rule 6\n",
+      "cnt_rule 3\n",
+      "\n",
+      "Iteration #10\n",
+      "Time since beggining:0:18:15.873441\n",
+      " best energy: 1.7881393432617188e-05\n",
+      "current energy: 1.7881393432617188e-05\n",
+      " lower_bound: 0.0\n",
+      "cnt_rule 6\n",
+      "\n",
+      "Iteration #11\n",
+      "Time since beggining:0:18:33.555558\n",
+      " best energy: 1.7881393432617188e-05\n",
+      "current energy: 1.7881393432617188e-05\n",
+      " lower_bound: 0.0\n",
+      "cnt_rule 6\n",
+      "cnt_rule 7\n",
+      "\n",
+      "Iteration #12\n",
+      "Time since beggining:0:18:44.884257\n",
+      " best energy: 1.7881393432617188e-05\n",
+      "current energy: 1.7881393432617188e-05\n",
+      " lower_bound: 0.0\n",
+      "cnt_rule 6\n",
+      "I killed 1 unitaries, Ef - Ei: 1.1920928955078125e-07\n",
+      "\n",
+      "Iteration #13\n",
+      "Time since beggining:0:21:33.541460\n",
+      " best energy: 1.4424324035644531e-05\n",
+      "current energy: 1.4424324035644531e-05\n",
+      " lower_bound: 0.0\n",
+      "cnt_rule 7\n",
+      "\n",
+      "Iteration #14\n",
+      "Time since beggining:0:22:00.117024\n",
+      " best energy: 1.4424324035644531e-05\n",
+      "current energy: 1.4424324035644531e-05\n",
+      " lower_bound: 0.0\n",
+      "cnt_rule 5\n",
+      "I killed 1 unitaries, Ef - Ei: -3.5762786865234375e-07\n",
+      "I killed 2 unitaries, Ef - Ei: -2.980232238769531e-07\n"
      ]
     }
    ],
