local autoencoder runs

--- a/results/autoencoder/autoencoder_final-Copy3.ipynb
+++ b/results/autoencoder/autoencoder_final-Copy3.ipynb
@@ -624,13 +624,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "WW = cirq.resolve_parameters(auto_handler.give_circuit(indexed_circuit)[0], symbol_to_value)\n",
     "inverse_indexed_circuit, inversolver, Wdagger = auto_handler.give_inverse(indexed_circuit,symbol_to_value)\n",
     "Wdagger=cirq.unitary(Wdagger)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "54"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "au_evaluator.count_cnots(au_evaluator.evolution[au_evaluator.get_best_iteration()][2])"
    ]
   },
   {
